join us form fix on mobile devices

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7434,7 +7434,7 @@ blockquote span {
 }
 
 .contact-us .inner-content {
-    padding: 50px;
+    padding: 10px;
     border-radius: 5px;
     overflow: hidden;
     background-color: #fff;
@@ -7945,7 +7945,7 @@ span.total-projects {
     margin-top: 2.5rem;
 }
 .become-shaper [class*="col-"] {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
 }
 .become-shaper input,
 .become-shaper span,
@@ -7954,7 +7954,6 @@ span.total-projects {
     display: block;
     padding: 5px;
     border: none;
-    font-size: 20px;
 }
 
 .become-shaper textarea:focus,
@@ -7993,6 +7992,7 @@ span.total-projects {
     transition: width 0.4s ease;
     height: 0px;
 }
+
 .become-shaper label sup {
     color: red;
 }
@@ -8016,8 +8016,8 @@ span.total-projects {
 .become-shaper input.question:focus + label > span,
 .become-shaper input.question:valid + label > span {
     top: -80px;
-    font-size: 22px;
     color: #333;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
 .become-shaper textarea.question:focus + label > span,
@@ -8043,8 +8043,7 @@ span.total-projects {
     margin: 0;
     position: absolute;
     color: #333;
-    font-size: 20px;
-    top: -50px;
+    top: -60px;
     left: 0px;
     z-index: 1;
     -webkit-transition: top 0.2s ease, font-size 0.2s ease, color 0.2s ease;
@@ -8104,6 +8103,56 @@ input[type="date"]:focus::-webkit-datetime-edit {
     font-weight: 300;
     color: #333;
 }
+
+@media (max-width: 991px) {
+    /* .become-shaper input.question.full-width-m + label,
+    .become-shaper textarea.question.full-width-m + label {
+        white-space: normal;
+        width: 100%;
+        height: 05rem;
+    }
+    .become-shaper input.question.full-width-m + label > span,
+    .become-shaper textarea.question.full-width-m + label > span {
+        top: -7.5rem !important;
+    } */
+    .become-shaper .row > div:nth-child(n + 6) input.question + label {
+        white-space: normal;
+        width: 100%;
+        height: 05rem;
+    }
+    .become-shaper .row > div:nth-child(9) input.question + label {
+        height: 1rem;
+    }
+    .become-shaper .row > div:nth-child(n + 6) input.question + label > span {
+        top: -7.5rem;
+    }
+    .become-shaper .row > div:nth-child(9) input.question + label > span {
+        top: -8rem !important;
+    }
+    /* .become-shaper .row > div:nth-child(n + 6) input.question:focus,
+    .become-shaper .row > div:nth-child(n + 6) input.question:valid {
+        padding-top: 0 !important;
+    } */
+    /* .become-shaper
+        .row
+        > div:nth-child(n + 6)
+        input.question:focus
+        + label
+        > span,
+    .become-shaper
+        .row
+        > div:nth-child(n + 6)
+        input.question:valid
+        + label
+        > span {
+        top: -7.5rem;
+        font-size: ;
+        color: #333;
+    } */
+    .mb-4rem {
+        margin-bottom: 4rem;
+    }
+}
 /* apr 22 */
 @media (min-width: 1024px) {
     .right_pane_text_inner {
@@ -8122,6 +8171,9 @@ input[type="date"]:focus::-webkit-datetime-edit {
     }
     .right_pane_text_inner h3 {
         color: #f9f9f9;
+    }
+    .contact-us .inner-content {
+        padding: 50px;
     }
 }
 
@@ -8282,7 +8334,7 @@ button.join-us-btn {
 .impact-text {
     margin-top: 1rem;
     text-align: center;
-    height:2.4rem
+    height: 2.4rem;
 }
 .impact-text h5 {
     font-size: 18px;
